--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,11 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.2.1'
 
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+
     implementation 'com.mapbox.mapboxsdk:mapbox-sdk-services:5.5.0'
 
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 
+    implementation 'org.greenrobot:eventbus:3.2.0'
 }
