--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
 
     implementation 'org.greenrobot:eventbus:3.2.0'
-
+    implementation 'com.mapbox.mapboxsdk:mapbox-sdk-services:5.5.0'
 
     def room_version = "2.2.5"
 
@@ -59,6 +59,8 @@ dependencies {
 
     // optional - Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:$room_version"
+
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
 
     //   coruntine implement для запроса в интернет
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
