--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.2.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-sdk-services:5.5.0'
 
+    implementation 'com.mapbox.mapboxsdk:mapbox-sdk-turf:5.5.0'
+
     def room_version = "2.2.5"
 
     implementation "androidx.room:room-runtime:$room_version"
